# CaWoSched

./: .gitignore  LICENSE  README.md
CaWoSched/: CMakeLists.txt  build.sh
CaWoSched/app/: main_multiple_processors.cpp
CaWoSched/lib/multipleProcessors/: multiple_processors.cpp  multiple_processors.h
ILP/: multiple_machines_no_freezing_hetero.py
experiments/: README.md
experiments/Mappings/: atacseq10000_mapping_large.txt  atacseq10000_mapping_small.txt  atacseq1000_mapping_large.txt  atacseq1000_mapping_small.txt  atacseq15000_mapping_large.txt  atacseq15000_mapping_small.txt  atacseq18000_mapping_large.txt  atacseq18000_mapping_small.txt  atacseq20000_mapping_large.txt  atacseq20000_mapping_small.txt  atacseq2000_mapping_large.txt  atacseq2000_mapping_small.txt  atacseq200_mapping_large.txt  atacseq200_mapping_small.txt  atacseq25000_mapping_large.txt  atacseq25000_mapping_small.txt  atacseq30000_mapping_large.txt  atacseq30000_mapping_small.txt  atacseq4000_mapping_large.txt  atacseq4000_mapping_small.txt  atacseq8000_mapping_large.txt  atacseq8000_mapping_small.txt  atacseq_mapping_large.txt  atacseq_mapping_small.txt  bacass_mapping_large.txt  bacass_mapping_small.txt  chipseq10000_mapping_large.txt  chipseq10000_mapping_small.txt  chipseq1000_mapping_large.txt  chipseq1000_mapping_small.txt  chipseq15000_mapping_large.txt  chipseq15000_mapping_small.txt  chipseq18000_mapping_large.txt  chipseq18000_mapping_small.txt  chipseq20000_mapping_large.txt  chipseq20000_mapping_small.txt  chipseq2000_mapping_large.txt  chipseq2000_mapping_small.txt  (+58 more)
(+1567 files in other folders)
